k8s/namespaces/media/flaresolverr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/managed-by: flux
    app.kubernetes.io/egress: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaresolverr
        app.kubernetes.io/managed-by: flux
        app.kubernetes.io/egress: wireguard
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.96.0.11
        searches:
          - media.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "5"
      runtimeClassName: youki
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: flaresolverr
          # renovate: datasource=docker depName=docker.io/flaresolverr/flaresolverr
          image: docker.io/flaresolverr/flaresolverr:latest@sha256:c80ae007ce2ccdcd217a12426e4f039ef763ff90738c808d38810c3e59323767
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8191
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2000m"
              memory: "2048Mi"
              ephemeral-storage: "5Gi"
          livenessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
