k8s/namespaces/media/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8191
      targetPort: 8191
      protocol: TCP
      name: flaresolverr-api
  type: ClusterIP
