k8s/namespaces/media/flaresolverr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-https
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flaresolverr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: flaresolverr
          port: 8191
  tls: 
    secretName: oglesby-io-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-http
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`flaresolverr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: redirect-https
          namespace: ingress
      services:
        - name: flaresolverr
          port: 8191
